tests/error/non_constant_array_length_inside_structure_at_global_scope.c
// fail "Array subscript is not constant."

int a;
struct{
    int arr[a];
};

int main(){
    
}
